# IM

./: CMakeLists.txt  LICENSE  README.md
graph/: graphtest.graph
src/method/: OCIMTS.hpp  random.hpp  twophasegreedy.hpp
src/model/: IC.hpp  graph.hpp  graphutil.hpp  greedy.hpp  model.hpp
src/runner/: runner.cpp
src/utils/: rand.hpp
